Refactoring of URIs passed to UI
